src/test/deca/context/valid/comp_int_float.deca

// Description :
// Comparaison entre int et float 

// Resultats :
// ok


{
  int a = 3;
  float b = 3.0;
  boolean c = (a == b);
}