src/test/deca/context/invalid/eq_incompatible.deca

// Description :
// Comparaison == entre int et boolean 
//
// Resultats :
// Erreur contextuelle
// types incompatibles pour == : int et boolean
//

{
  boolean b;
  b = (1 == true);
}